# dmsh

./: README.md  pyproject.toml
dmsh/: cli.py  croaker.py  jobs.py
dmsh/shell/: base.py  interactive_shell.py
