[tool.poetry]
name = 'dnd'
version = '1.0'
license = 'The Unlicense'
authors = ['Greg Boyington <evilchili@gmail.com>']
description = 'Dungeon Master SHell.'
packages = [
    { include = "dmsh" }
]

[tool.poetry.dependencies]
python = "^3.10"

# local wotsits
dnd-npcs= { git = "https://github.com/evilchili/dnd-npcs", branch = 'main' }
dnd-rolltable = { git = "https://github.com/evilchili/dnd-rolltable", branch = 'main' }
dnd-calendar = { git = "https://github.com/evilchili/dnd-calendar", branch = 'main' }
elethis-cipher= { git = "https://github.com/evilchili/elethis-cipher", branch = 'main' }

prompt-toolkit = "^3.0.38"
typer = "^0.9.0"
rich = "^13.7.0"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
dmsh = "dmsh.cli:app"


[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pyproject-autoflake = "^1.0.2"

[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true

[tool.autoflake]
check = false                        # return error code if changes are needed
in-place = true                      # make changes to files instead of printing diffs
recursive = true                     # drill down directories recursively
remove-all-unused-imports = true     # remove all unused imports (not just those from the standard library)
ignore-init-module-imports = true    # exclude __init__.py when removing unused imports
remove-duplicate-keys = true         # remove all duplicate keys in objects
remove-unused-variables = true       # remove unused variables
